generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImDrawListSplitter.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImDrawListSplitter where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void Clear(ImDrawListSplitter* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawListSplitter_Clear"
  imDrawListSplitter_Clear :: (Ptr ImDrawListSplitter) -> IO ()
-- C: void ClearFreeMemory(ImDrawListSplitter* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawListSplitter_ClearFreeMemory"
  imDrawListSplitter_ClearFreeMemory :: (Ptr ImDrawListSplitter) -> IO ()
-- C: void Merge(ImDrawListSplitter* self, ImDrawList* draw_list)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawListSplitter_Merge"
  imDrawListSplitter_Merge :: (Ptr ImDrawListSplitter) -> (Ptr ImDrawList) -> IO ()
-- C: void SetCurrentChannel(ImDrawListSplitter* self, ImDrawList* draw_list, int channel_idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawListSplitter_SetCurrentChannel"
  imDrawListSplitter_SetCurrentChannel :: (Ptr ImDrawListSplitter) -> (Ptr ImDrawList) -> CInt -> IO ()
-- C: void Split(ImDrawListSplitter* self, ImDrawList* draw_list, int count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawListSplitter_Split"
  imDrawListSplitter_Split :: (Ptr ImDrawListSplitter) -> (Ptr ImDrawList) -> CInt -> IO ()
